# mwb

./: .gitignore  Cargo.toml  README.md  deny.toml  deny.toml.backup  examples.bat  install.ps1  install.sh
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependencies.yml  quality.yml
src/: logging.rs  main.rs
src/ai/: mod.rs  tools.rs
