[package]
name = "mwb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
mediathekviewweb = "0.4.1"
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"